--- a/Fruit/differ128.html
+++ b/Fruit/differ128.html
@@ -301,8 +301,8 @@
         return value;
     }
 // console.log(111)
-    // console.log(PRGA());
-    console.log(PRGASgn2());
+    console.log(PRGA());
+    // console.log(PRGASgn2());
 </script>
 
 </html>
