--- a/Fruit/Fruit 80.html
+++ b/Fruit/Fruit 80.html
@@ -13,6 +13,8 @@
     let p0 = new Array();
     let q0 = new Array();
     let c4 = new Array();
+    let j = 0;
+    let key = '0000000100100011010001010110011110001001101010111100110111101111010111';
 
     for (let i = 127; i < 256; i++) {
         let temp = new Array();
@@ -44,6 +46,17 @@
         r0[i] = temp[3]*Math.pow(2,0) + temp[4]*Math.pow(2,1) + temp[5]*Math.pow(2,2) + temp[6]*Math.pow(2,3);
         p0[i] = temp[1]*Math.pow(2,0) + temp[2]*Math.pow(2,1) + temp[3]*Math.pow(2,2) + temp[4]*Math.pow(2,3) + temp[5]*Math.pow(2,4)+16;
         q0[i] = temp[0]*Math.pow(2,0) + temp[1]*Math.pow(2,1) + temp[2]*Math.pow(2,2) + temp[3]*Math.pow(2,3) + temp[4]*Math.pow(2,4)+48;
+    
+        let z = (parseInt(key[r0[i]]) & parseInt(key[p0[i]])) ^ 
+                (parseInt(key[p0[i]]) & parseInt(key[q0[i]])) ^ 
+                (parseInt(key[r0[i]]) & parseInt(key[q0[i]])) ^
+                parseInt(key[p0[i]])^parseInt(key[q0[i]]);
+		// console.log(z);
+		let flag = z === 0 ? false : true;
+		j++;
+		// console.log(j);
+		console.log('(assert (= (xor (and k'+r0[i]+' k'+p0[i]+') (and k'+p0[i]+' k'+q0[i]+') (and k'+r0[i]+' k'+q0[i]+') k'+p0[i]+' k'+q0[i]+') '+ flag +'))')
+	
     }
     console.log(r0);
     console.log(p0);
